--- a/styles.css
+++ b/styles.css
@@ -4,45 +4,43 @@ html, body {
 }
 
 .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;  
-    background-color: chocolate; 
-}
-
-.header h1 {
-    font-size: 6rem;
-    font-weight: bold;
-    padding: 6rem 4rem;
-}
-.header p {
-    font-size: 4rem;
-    padding: 6rem 4rem;
+    display: grid;
+    grid-template-columns: 30fr 45fr 25fr;
+    grid-template-rows: 16rem; 
+    /* background-color: chocolate;  */
 }
 
 .header__left {
+    grid-area: 1 / 1 / 2 / 2;
     display: inline-flex;
     justify-content:flex-start;
     align-items: center;
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
 
 }
 .header__right {
+    grid-area: 1 / 3 / 2 / 4;
     display: flex;
     justify-content:center;
     align-items: center;
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
 }
-
+.header h1 {
+    font-size: 6rem;
+    font-weight: bold;
+    padding: 4rem 4rem;
+    color: #008080;
+}
+.header p {
+    color: #00cccc;
+    font-size: 4rem;
+    padding: 4rem 4rem;
+}
 .header__password {
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding-right: 4rem;
-    /* display: grid;
-    grid-template-columns: 30fr 70fr;
-    grid-template-rows: 100fr; */
-
 }
 .header__password img {
     height: 4rem; 
@@ -50,20 +48,18 @@ html, body {
     padding: 2rem 1rem
 }
 .header__password h2 {
+    color: #008080;
     font-size: 4rem;
     font-weight: bold;
-    padding: 2rem 1rem;   
+    padding: 1rem 1rem;   
 }
 .header__name {
+    color: #008080;
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding-left: 4rem;
-    /* display: grid;
-    grid-template-columns: 70fr 30fr;
-    grid-template-rows: 100fr; */
 }
-
 .header__name img {
     height: 4rem; 
     width: 4rem;
@@ -78,64 +74,69 @@ html, body {
 
 .main {
     display: grid;
-    grid-template-columns: 30fr 70fr;
-    grid-template-rows: 100fr;
+    grid-template-columns: 25fr 75fr;
+    grid-template-rows: 150rem;
+    background-color: #f1f6f6;
 }
 
 .sidebar {
-    /* grid-row-start: 1;
-    grid-row-end: 1; */
-    grid-column-start: 1;
-    grid-column-end: 2;
-    background-color: magenta;
+    grid-area: 1 / 1 / 2 / 2;
+    /* background-color: magenta; */
     display: grid;
-    grid-template-columns: 10% auto 10%;
-    grid-template-rows: 10fr auto 10fr; 
+    grid-template-columns: 10fr 80fr 10fr;
+    grid-template-rows: 5fr 90fr 5fr; 
 }
 
 .sidebar__card {
-    background-color: powderblue;
+    background-color: white;
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
-    box-shadow: 2px 2px;
+    box-shadow: 0px 4px;
+    padding: 0rem 6rem;
+    border-radius: 4rem;
+    box-sizing: border-box;
 }
 
 .sidebar__title h2{
+    color: #008080;
     font-size: 4rem;
     font-weight: bold;
-    padding: 2rem 2rem;
 }
 
 .sidebar__links {
     display: table;
     vertical-align: middle;
 }
+.book__link:hover {
+    text-decoration: underline;
+}
 .book__link {
+    color: #008080;
     display: block;
+    text-decoration: none;
     font-size: 4rem;
-    padding: 2rem 2rem;
+    padding: 2rem 0rem;
 }
 
 .sidebar__add h2{
+    color:  #00cccc;
     font-size: 4rem;
     font-weight: bold;
-    padding: 2rem 2rem;
 }
 
 .sidebar__add__info {
     display: grid;
     grid-template-columns: 70fr 30fr;
-    grid-template-rows: 1;
-    padding: 2rem 2rem;
+    grid-template-rows: 10fr 80fr 10fr;
+    padding: 2rem 0rem;
 }
 
 .sidebar__add__info input{
     border-radius: 25px;
-    padding: 2rem 2rem;
-    margin: 2rem;
     font-size: 4rem;
+    grid-area: 2 / 1 / 3 / 2;
 }
 
 .sidebar__add__info button{
@@ -151,39 +152,134 @@ html, body {
     font-weight: bolder;
     cursor: pointer;
     border-radius: 40px;
-
+    grid-area: 2 / 2 / 3 / 3;
 }
 
+.book__view {
+    display: grid;
+    grid-template-columns: 100fr;
+    grid-template-rows: 10fr 8fr 82fr;
+    padding: 6rem 0rem;
+}
 
+.book__view__up {
+    display: grid;
+    grid-template-columns: 25fr 45fr 30fr;
+    grid-template-rows: 100fr; 
 
-/* body {
-    background: papayawhip;
 }
-h1 {
-    background: greenyellow;
-    color: tomato;
-    margin: 0;
-    padding: 8px 16px;
-    display: inline-block;
+.book__view__left {
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1rem 1rem;
 }
-h1 a:hover {
-    transform: scale(1.0);
+.material-icons.secondary { 
+    color: #00cccc;   
 }
-a.bailarin {
-    background: orange;
+.main__title {
+    color: #00cccc;
+    font-size: 6rem;
+    margin: 0rem;
 }
-h1 a {
-    background: palevioletred;
+
+.book__view__right {
+    grid-area: 1 / 3 / 2 / 4;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1rem 1rem;
 }
-a {
-    background: indigo;
-    display: inline-block;
-    transition: 0.25s;
+
+.button {
+    border-radius: 4rem;
+    border: none;
+    color: white;
+    font-family: sans-serif;
+    font-size: 3rem;
+    font-weight: bold;
+    height: 8rem;
+    text-align: center;
+    text-transform: uppercase;
 }
-a:hover {
-    transform: scale(1.5);
+
+.button.button--primary {
+    background:#00c5c1;
 }
-.bailarin:hover {
-    transform: rotate(180deg);
-    transition: 2s;
-} */
+
+.button.button--secondary {
+    background: #00c366;
+}
+
+.book__view__middle {
+    display: grid;
+    grid-template-columns: 15fr 15fr 70fr;
+    grid-template-rows: 100fr;
+}
+
+.book__view__slice {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 1rem 1rem;
+    box-shadow: 0px 1rem #019c97;
+}
+
+.book__view__slice p {
+    color: #019c97;
+    font-size: 4rem;
+    font-weight: 500;
+    padding: 1rem 1rem;
+    
+}
+
+.book__view__slice.secondary {
+    box-shadow: none;
+}
+.book__view__bottom {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 4rem 2rem;
+}
+
+.book {
+    border-radius: 2rem;
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    height: 60rem;
+    width: 40rem;
+    margin: 2rem 5rem;
+    overflow: hidden;
+}
+.book__image {
+    background-position: center;;
+    background-size: cover;
+    height: 70rem
+}
+.book__footer {
+    background: white;
+    padding: 16px;
+    position: relative;
+}
+.book__title {
+    color: #019c97;
+    font-size: 3rem;
+    font-weight: bold;
+}
+.book__size {
+    color: #777777;
+    font-size: 3rem;
+}
+.book__actions {
+    bottom: 0;
+    height: 14rem;
+    position: absolute;
+    right: 0;
+    width: 12rem;
+}
